css/project.css
body {
    margin-top: 48px;
}
.heading {
    text-align: center;
    margin: 0 auto;
}
.subheading-small {
    text-align: left;
    padding-top: 1em;
    padding-bottom: .5em;
}


/*************/
/*BREADCRUMBS*/
/*************/
.breadcrumbs {
    display: grid;
    grid-template-columns: auto auto;
    align-items: center;
    justify-content: flex-start;
    padding: 1em 2em 0 2em;

    /* margin-right: 5em; */
}
.breadcrumbs .back span {
    font-size: 1.1em;
    display: flex;
    align-items: center;
}
.breadcrumbs a {
    color: var(--main-dark);
    font-size: 1em;
    text-decoration: none;
}

/*****************/
/*PROJECT CONTENT*/
/*****************/
.description .caption {
    font-size: .75em;
}
/* .project-content {
    padding-top: 1em;
} */
/* .project-content img {
    display: flex;
    margin: 0 auto;
    margin-bottom: .75em;  
} */
.project-content figure {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
    width: 100%;
}
.project-content figcaption {
    text-align: center;
    padding-top: 1em;

}
.project-content .image {
    /* width: 100%;
    height: 100%; */
    width: 100%;
    margin: 0 auto;
    display: flex;
    /* align-items: center;
    justify-content: center; */
}
.project-content div:first-child {
    justify-content: start;
}



@media screen and (min-width: 768px) {
    .project-content .image {
        /* width: 100%;
        height: 100%; */
        /* width: 30em; */
        margin: 0 auto;
        display: flex;
        /* align-items: center;
        justify-content: center; */
    }

    .project-content figcaption {
        text-align: center;
        max-width: 65%;
        margin: 0 auto;
    }

    .project-content .caption {
        font-size: .8em;
    }


}

@media screen and (min-width: 1024px) {

    .project-content figcaption {
        max-width: 50%;
    }
    .project-content .caption {
        font-size: 1em;
    }

    /***********/
    /*NEW STUFF*/
    /***********/
    /* .project-content .info, .project-content .process {
        background-color: pink;
    }
    .project-content .context, .project-content .outcome {
        background-color: lightgreen;
    } */


    .grid-two-columns {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 2em;
    }
    .grid-three-columns {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-gap: 2em; 
    }


    .project-content {
        max-width: 1000px;
        margin: 0 auto;
    }
    .project-content h2 {
        /* padding-top: 2em; */
        padding-bottom: 1em;
    }
    .project-content .section {
        padding-top: 5em;
    }
    .project-content .normal-text {
        font-size: 1em;
        letter-spacing: 1px;
    }

    .project-content .info {
        /* display: grid;
        grid-template-columns: 1fr 1fr; */
        /* grid-gap: 2em; */
        /* height: 100vh; */
        /* margin: 5em 0; */
        padding-top: 6em;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .project-content .info .heading {
        text-align: left;
        margin-bottom: .5em;
    }
    .project-content .info img {
        width: 100%;
    }

    
    .disclosure .process .grid-two-columns {
        padding: 1em 0;
    }
    .disclosure .outcome .grid-three-columns {
        padding-bottom: 1em;
    }

    .disclosure .outcome {
        padding-bottom: 10em;
    }
    .disclosure .outcome img {
        width: 100%;
    }

    

    .raywater .process .grid-two-columns {
        padding-bottom: 1em;
    }
    /* .raywater .full-img {
        padding-bottom: 2em;
    } */
    .raywater .image {
        padding-bottom: 3em;
    }
    .raywater .outcome {
        padding-bottom: 10em;
    }



}

